ADD: add scala plugin in pom for CI test case (without pluginManagement tag if not sub-module)